Taking a bit of a detour in order to investigate why the dimensions are not matching up.  I think it is because the desired p and desired q are still lying around. They should be removed.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -212,7 +212,7 @@
     "    q_D = np.array([0])\n",
     "    p_D = np.array([0])\n",
     "    u_0 = np.array([0])\n",
-    "    qpu_vec = np.hstack([q_0, p_0, q_D, p_D, u_0])\n",
+    "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "    state_dim = 1 \n",
     "    Gamma = 1 \n",
     "       \n",
@@ -262,13 +262,13 @@
     "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
     "    def q_rhs_H_mf(self, q_l, p_mf, u_l):\n",
-    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_l, p_mf, u_l) + sum(self.q_rhs_H_mf_u(q_l, p_mf)*u for i,j in zip())\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_l, p_mf) + sum(self.q_rhs_H_mf_u(q_l, p_mf)*u for i,j in zip())\n",
     "        return p_H_mf_dot\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_l, p_mf):\n",
     "        # there should be one ofthese for each control variable\n",
-    "        p_H_mf_u_dot_1 = q_l[0] + p_mf # or something\n",
-    "        p_H_mf_u_dot_2 = q_l[1] + p_mf # or something\n",
+    "        p_H_mf_u_dot_1 = q_l[0] + p_mf[0] # or something\n",
+    "        p_H_mf_u_dot_2 = q_l[1] + p_mf[1] # or something\n",
     "        return np.concate([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
     "    \n",
     "    def p_rhs_H_mf(self, q_l, p_mf, p_l, u_l):\n",
@@ -277,10 +277,10 @@
     "    def p_rhs_H_mf_nou(self, q_l, p_mf):\n",
     "        return q_l+p_mf # or something\n",
     "\n",
-    "    def q_rhs_H_mf_nou(self, q_l, p_mf, u_l):\n",
+    "    def q_rhs_H_mf_nou(self, q_l, p_mf):\n",
     "        import pdb; pdb.set_trace()\n",
-    "        p_H_mf_nou_dot_1 = q_l[0] + p_mf*u_l\n",
-    "        p_H_mf_nou_dot_2 = q_l[1] + p_mf*u_l # this line is the problem\n",
+    "        p_H_mf_nou_dot_1 = q_l[0] + p_mf[0]\n",
+    "        p_H_mf_nou_dot_2 = q_l[1] + p_mf[1] # this line is the problem\n",
     "        return np.concatenate([p_H_mf_nou_dot_1, p_H_mf_nou_dot_2])\n",
     "\n",
     "#     def p_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -647,31 +647,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> <ipython-input-3-c7575b90efdb>(37)q_rhs_H_mf_nou()\n",
-      "-> p_H_mf_nou_dot_1 = q_l[0] + p_mf*u_l\n",
-      "(Pdb) q_1\n",
-      "*** NameError: name 'q_1' is not defined\n",
-      "(Pdb) q_l\n",
-      "array([0])\n",
-      "(Pdb) p_mf\n",
-      "array([0, 0])\n",
-      "(Pdb) u_l\n",
-      "array([0])\n",
-      "(Pdb) p_mf*u_l\n",
-      "array([0, 0])\n",
-      "(Pdb) +q_l\n",
-      "array([0])\n",
-      "(Pdb) q_l\n",
-      "array([0])\n",
-      "(Pdb) q_l[0]\n",
-      "0\n",
-      "(Pdb) q_l[0] + p_mf*u_l\n",
-      "array([0, 0])\n",
-      "(Pdb) n\n",
-      "> <ipython-input-3-c7575b90efdb>(38)q_rhs_H_mf_nou()\n",
-      "-> p_H_mf_nou_dot_2 = q_l[1] + p_mf*u_l\n",
-      "(Pdb) q_l[1] + p_mf*u_l\n",
-      "*** IndexError: index 1 is out of bounds for axis 0 with size 1\n"
+      "> <ipython-input-3-35a10803959c>(37)q_rhs_H_mf_nou()\n",
+      "-> p_H_mf_nou_dot_1 = q_l[0] + p_mf[0]\n",
+      "(Pdb) c\n",
+      "ode error: index 1 is out of bounds for axis 0 with size 1\n",
+      "ode error: object of type 'numpy.int64' has no len()\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-80324fc1031b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# forgot to pass in 'u_l' as a keyword argument\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_dynamics\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m    150\u001b[0m         \u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m         \u001b[0mu_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 152\u001b[0;31m         \u001b[0mqp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_q_p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# assume \"u\" constant, and propagate q and p\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    153\u001b[0m         \u001b[0;31m# prepend initial condition for q and p for propagating u\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m         \u001b[0mlhs_qp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# last item in qpu_vec is \"u\", so leave it out. last item in qp_vecs is the last point in propagation (since we are using left hand side of q and p - leave it out.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_q_p\u001b[0;34m(qpu_vec, t_start, t_end, sliding_window_instance)\u001b[0m\n\u001b[1;32m    190\u001b[0m         \u001b[0mn_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m         \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfailFlag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miter_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mode_rk23\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqp_rhs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrateTol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrateMaxIter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m         \u001b[0mqp_vecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqp_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m         \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
      ]
     }
    ],
