Made multiple changes and now things appear to be working:     - removed references to desired state and desired costate     - added "gamma" in addition to "Gamma" as an attribute to the class Agent     - changed the rhs functions so that they return the correct dimensions     - altered the method "propagate_dynamics" in sliding_window.py to return       correct dimensions

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -76,11 +76,9 @@
     "        return \n",
     "\n",
     "    def qp_rhs_H_l_nou(self, t, qp_vec, **kwargs):\n",
-    "        dim = len(qp_vec)/4\n",
+    "        dim = len(qp_vec)/2\n",
     "        q = qp_vec[:dim]\n",
     "        p = qp_vec[dim:2*dim]\n",
-    "        q_D = qp_vec[2*dim:3*dim]\n",
-    "        p_D = qp_vec[3*dim:]\n",
     "        u = kwargs['u_0']\n",
     "        # for q-dot\n",
     "        q_dot =  np.zeros(np.shape(p))\n",
@@ -130,33 +128,33 @@
     "        # for u-dot\n",
     "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
-    "    def qp_rhs_H_s_nou(self, t, qp_vec, **kwargs):\n",
-    "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF\n",
-    "        # kwargs should have quenched values\n",
-    "        qp_vec_quenched = self.bb.construct_q_p(qp_vec, self)\n",
-    "        # yes it is really slow, but we read from blackboard every time we evaluate this\n",
-    "        qp_rhs_H_s = (1-alpha)*self.qp_rhs_H_l_nou(qp_vec) + alpha*mf.qp_rhs_H_mf_nou(qp_vec)\n",
-    "        # must return result in qp_vec format because ode rk23 will call this\n",
-    "        # qp_rhs_H_s should look like this: np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "        return qp_rhs_H_s\n",
+    "#     def qp_rhs_H_s_nou(self, t, qp_vec, **kwargs):\n",
+    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF\n",
+    "#         # kwargs should have quenched values\n",
+    "#         qp_vec_quenched = self.bb.construct_q_p(qp_vec, self)\n",
+    "#         # yes it is really slow, but we read from blackboard every time we evaluate this\n",
+    "#         qp_rhs_H_s = (1-alpha)*self.qp_rhs_H_l_nou(qp_vec) + alpha*mf.qp_rhs_H_mf_nou(qp_vec)\n",
+    "#         # must return result in qp_vec format because ode rk23 will call this\n",
+    "#         # qp_rhs_H_s should look like this: np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
+    "#         return qp_rhs_H_s\n",
     "       \n",
-    "    def qp_rhs_H_s_u(self, t, qp_vec, **kwargs):\n",
-    "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "        qp_rhs_H_s = (1-alpha)*qp_rhs_l(self, qp_vec) + alpha*qp_rhs_MF()\n",
-    "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
+    "#     def qp_rhs_H_s_u(self, t, qp_vec, **kwargs):\n",
+    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
+    "#         qp_rhs_H_s = (1-alpha)*qp_rhs_l(self, qp_vec) + alpha*qp_rhs_MF()\n",
+    "#         return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
     "       \n",
-    "    def u_rhs_H_s_nou(self, t, u_vec, **kwargs):\n",
-    "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "        Gamma = kwargs['Gamma']\n",
-    "        # for u-dot\n",
-    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "#     def u_rhs_H_s_nou(self, t, u_vec, **kwargs):\n",
+    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
+    "#         Gamma = kwargs['Gamma']\n",
+    "#         # for u-dot\n",
+    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
-    "    def u_rhs_H_s_u(self, t, u_vec, **kwargs):\n",
-    "        # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "        Gamma = kwargs['Gamma']\n",
-    "        # for u-dot\n",
-    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "#     def u_rhs_H_s_u(self, t, u_vec, **kwargs):\n",
+    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
+    "#         return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
+    "#         Gamma = kwargs['Gamma']\n",
+    "#         # for u-dot\n",
+    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
     "    def H_l_D():\n",
     "        pass\n",
@@ -204,17 +202,18 @@
     "        return p_l_dot\n",
     "    \n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
-    "        return -1*Gamma*np.zeros(np.shape(u_vec)) \n",
+    "        return -1*self.Gamma*np.zeros(np.shape(u_vec)) \n",
     "    \n",
     "    # Inputs for numerical propagator\n",
-    "    q_0 = np.array([0])\n",
-    "    p_0 = np.array([0])\n",
-    "    q_D = np.array([0])\n",
-    "    p_D = np.array([0])\n",
+    "    # qp_vec is going to be [q_l, p_l, p_mf], so it will have dimension = 3*state_dim\n",
+    "    q_l_0 = np.array([0])\n",
+    "    p_l_0 = np.array([0])\n",
+    "    p_mf_0 = np.array([0])\n",
     "    u_0 = np.array([0])\n",
-    "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
-    "    state_dim = 1 \n",
+    "    qpu_vec = np.hstack([q_l_0, p_l_0, p_mf_0, u_0])\n",
+    "    state_dim = 1\n",
     "    Gamma = 1 \n",
+    "    gamma = 1\n",
     "       \n",
     "    # Inputs for numerical integration\n",
     "    integrateTol = 10**-3\n",
@@ -267,9 +266,9 @@
     "        \n",
     "    def q_rhs_H_mf_u(self, q_l, p_mf):\n",
     "        # there should be one ofthese for each control variable\n",
-    "        p_H_mf_u_dot_1 = q_l[0] + p_mf[0] # or something\n",
-    "        p_H_mf_u_dot_2 = q_l[1] + p_mf[1] # or something\n",
-    "        return np.concate([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
+    "        p_H_mf_u_dot_1 = q_l + p_mf # or something\n",
+    "#         p_H_mf_u_dot_2 = q_l[1] + p_mf[1] # or something\n",
+    "        return np.concatenate([p_H_mf_u_dot_1]) #, p_H_mf_u_dot_2])\n",
     "    \n",
     "    def p_rhs_H_mf(self, q_l, p_mf, p_l, u_l):\n",
     "        return self.p_rhs_H_mf_nou(q_l, p_mf) + sum([self.p_rhs_H_mf_u(q_l, p_mf)*u for i,j in zip()])\n",
@@ -278,10 +277,9 @@
     "        return q_l+p_mf # or something\n",
     "\n",
     "    def q_rhs_H_mf_nou(self, q_l, p_mf):\n",
-    "        import pdb; pdb.set_trace()\n",
-    "        p_H_mf_nou_dot_1 = q_l[0] + p_mf[0]\n",
-    "        p_H_mf_nou_dot_2 = q_l[1] + p_mf[1] # this line is the problem\n",
-    "        return np.concatenate([p_H_mf_nou_dot_1, p_H_mf_nou_dot_2])\n",
+    "        p_H_mf_nou_dot_1 = q_l + p_mf\n",
+    "#         p_H_mf_nou_dot_2 = q_l[1] + p_mf[1] # this line is the problem\n",
+    "        return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
     "\n",
     "#     def p_rhs_H_mf_nou(self, t, qp_vec, **kwargs):\n",
     "#         # first find out if this needs to be a RHS function, or if it is only called internally.\n",
@@ -638,39 +636,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# forgot to pass in 'u_l' as a keyword argument\n",
+    "qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(myAgent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> <ipython-input-3-35a10803959c>(37)q_rhs_H_mf_nou()\n",
-      "-> p_H_mf_nou_dot_1 = q_l[0] + p_mf[0]\n",
-      "(Pdb) c\n",
-      "ode error: index 1 is out of bounds for axis 0 with size 1\n",
-      "ode error: object of type 'numpy.int64' has no len()\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-80324fc1031b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# forgot to pass in 'u_l' as a keyword argument\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpropagate_dynamics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyAgent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_dynamics\u001b[0;34m(sliding_window_instance)\u001b[0m\n\u001b[1;32m    150\u001b[0m         \u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m         \u001b[0mu_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqpu_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 152\u001b[0;31m         \u001b[0mqp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpropagate_q_p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# assume \"u\" constant, and propagate q and p\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    153\u001b[0m         \u001b[0;31m# prepend initial condition for q and p for propagating u\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m         \u001b[0mlhs_qp_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# last item in qpu_vec is \"u\", so leave it out. last item in qp_vecs is the last point in propagation (since we are using left hand side of q and p - leave it out.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/sliding_window.pyc\u001b[0m in \u001b[0;36mpropagate_q_p\u001b[0;34m(qpu_vec, t_start, t_end, sliding_window_instance)\u001b[0m\n\u001b[1;32m    190\u001b[0m         \u001b[0mn_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m         \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfailFlag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miter_i\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mode_rk23\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqp_rhs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_start\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_end\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrateTol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrateMaxIter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msliding_window_instance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m         \u001b[0mqp_vecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqp_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m         \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mqp_vecs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([0., 0., 0., 0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " array([0.]),\n",
+       " [array([0.])],\n",
+       " [array([0.])],\n",
+       " [array([0.])],\n",
+       " [array([0.])])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# forgot to pass in 'u_l' as a keyword argument\n",
-    "propagate_dynamics(myAgent)"
+    "qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us"
    ]
   },
   {
