--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,12 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "\n",
     "import numpy as np\n",
     "import scipy as sp\n",
     "import ode\n",
@@ -38,7 +39,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myAgent.qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# print len(self.state_indices) == self.state_dim \n",
+    "# print len(self.qpu_vec) == 3*self.state_dim + len(self.control_indices)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print myAgent.q_l_0\n",
+    "print myAgent.p_l_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print myAgent.p_mf_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "q_l_0 = np.array([0,1])\n",
+    "p_l_0 = np.array([0,3])\n",
+    "p_mf_0 = np.array([0,4])\n",
+    "u_0 = np.array([0,2])\n",
+    "qpu_vec = np.hstack([q_l_0, p_l_0, p_mf_0, u_0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 3, 0, 4, 0, 2])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qpu_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -65,6 +177,46 @@
     "        self.qp_l_vec = None\n",
     "        self.u_l_dict = None\n",
     "        self.qp_l_dict = None\n",
+    "\n",
+    "        # Inputs for numerical propagator\n",
+    "        # qp_vec is going to be [q_l, p_l, p_mf], so it will have dimension = 3*state_dim\n",
+    "\n",
+    "        self.q_l_0 = np.array([0])\n",
+    "        self.p_l_0 = np.array([0])\n",
+    "        self.p_mf_0 = np.array([0])\n",
+    "        self.u_0 = np.array([0])\n",
+    "        self.qpu_vec = np.hstack([self.q_l_0, self.p_l_0, self.p_mf_0, self.u_0])\n",
+    "        self.state_dim = 1\n",
+    "        self.Gamma = 1 \n",
+    "        self.gamma = 1\n",
+    "\n",
+    "        # Inputs for numerical integration\n",
+    "        self.integrateTol = 10**-3\n",
+    "        self.integrateMaxIter = 40\n",
+    "\n",
+    "        # Inputs for sliding window\n",
+    "        self.t_0 = 0 \n",
+    "        self.T =  2\n",
+    "        self.K=1 \n",
+    "\n",
+    "        self.t_terminal = 2\n",
+    "        self.n_s = 10\n",
+    "\n",
+    "        self.validate_dimensions()\n",
+    "\n",
+    "    def validate_dimensions(self):\n",
+    "        # TODO: move to parent class \"SlidingWindow\"\n",
+    "        assert len(self.state_indices) == self.state_dim, 'state dimensions are not consistent.  dimension of state indices is '+str(len(self.state_indices)) +' and state_dim is '+str(self.state_dim)\n",
+    "        assert len(self.control_indices) == len(self.u_0), 'control dimensions are not consistent.  dimension of control_indices is '+str(len(self.control_indices)) +' and len(u_0) is '+str(len(self.u_0))\n",
+    "        assert len(self.qpu_vec) == 3*self.state_dim + len(self.control_indices), ' control and state dimensions are not consistent with qpu_vec : length of qpu_vec is '+str(len(self.qpu_vec))+ ' and 3*self.state_dim + len(self.control_indices) is ' + str(3*self.state_dim + len(self.control_indices))\n",
+    "    \n",
+    "    '''\n",
+    "    TODO:  \n",
+    "    Add an assertion to check that the dimension of q_l_0, p_mf_0, and u_0:\n",
+    "        - the dimension of state_dim    \n",
+    "        - state_indices and control_indices set upon initiation of the Agent\n",
+    "        - \n",
+    "    '''\n",
     "    \n",
     "    def L_l(self, q, q_dot, u):\n",
     "        return\n",
@@ -203,28 +355,21 @@
     "    \n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
     "        return -1*self.Gamma*np.zeros(np.shape(u_vec)) \n",
-    "    \n",
-    "    # Inputs for numerical propagator\n",
-    "    # qp_vec is going to be [q_l, p_l, p_mf], so it will have dimension = 3*state_dim\n",
-    "    q_l_0 = np.array([0])\n",
-    "    p_l_0 = np.array([0])\n",
-    "    p_mf_0 = np.array([0])\n",
-    "    u_0 = np.array([0])\n",
-    "    qpu_vec = np.hstack([q_l_0, p_l_0, p_mf_0, u_0])\n",
-    "    state_dim = 1\n",
-    "    Gamma = 1 \n",
-    "    gamma = 1\n",
-    "       \n",
-    "    # Inputs for numerical integration\n",
-    "    integrateTol = 10**-3\n",
-    "    integrateMaxIter = 40\n",
-    "       \n",
-    "    # Inputs for sliding window\n",
-    "    t_0 = 0 \n",
-    "    T =  2\n",
-    "    K=1 \n",
-    "    t_terminal = 2 \n",
-    "    n_s = 10\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "blackboard = Blackboard()\n",
+    "mean_field = MeanField()\n",
+    "\n",
+    "myAgent=Agent(mean_field, blackboard, state_indices=[1], control_indices=[1])"
    ]
   },
   {
@@ -236,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +447,7 @@
        "{2, 3, 5}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -450,11 +595,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": " control dimensions and state are not consistent with qpu_vec : length of qpu_vec is 4 and 3*self.state_dim + len(self.control_indices) is 8",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-84-e8f6a86fe2b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmean_field\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMeanField\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmyAgent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mAgent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean_field\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mblackboard\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_indices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontrol_indices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mmyAgent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mmyAgent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_p_u_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'q'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-79-70d8bf150507>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, mean_field, blackboad, state_indices, control_indices)\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalidate_dimensions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mL_l\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-79-70d8bf150507>\u001b[0m in \u001b[0;36mvalidate_dimensions\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    185\u001b[0m         \u001b[0;31m# TODO: move to parent class \"SlidingWindow\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_indices\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'state dimensions are not consistent.  dimension of state indices is '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_indices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m' and state_dim is '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol_indices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' control dimensions and state are not consistent with qpu_vec : length of qpu_vec is '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqpu_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0;34m' and 3*self.state_dim + len(self.control_indices) is '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol_indices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m     \u001b[0;31m# Inputs for numerical propagator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m:  control dimensions and state are not consistent with qpu_vec : length of qpu_vec is 4 and 3*self.state_dim + len(self.control_indices) is 8"
+     ]
+    }
+   ],
    "source": [
     "blackboard = Blackboard()\n",
     "mean_field = MeanField()\n",
@@ -610,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -636,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -648,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -667,13 +826,24 @@
        " [array([0.])])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing plan:\n",
+    "    - Test this on a few nonzero inputs\n",
+    "    - Test this on multidimensional state\n",
+    "    - Test this on multidimensional control\n",
+    "    - Get this working for multiple agents"
    ]
   },
   {
