Removed the q_D and p_D values. Currently working on removing the q_p_u_dict references and instead just use attributes inherent to the agent.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -283,7 +283,7 @@
     "        self.q_l_0 = np.array([0,2])\n",
     "        self.p_l_0 = np.array([0,3])\n",
     "        self.p_mf_0 = np.array([0,1])\n",
-    "        self.u_0 = np.array([0,1])\n",
+    "        self.u_0 = np.array([0])\n",
     "        self.qpu_vec = np.hstack([self.q_l_0, self.p_l_0, self.p_mf_0, self.u_0])\n",
     "        self.state_dim = 2\n",
     "        self.Gamma = 1 \n",
@@ -527,21 +527,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{2, 3, 5}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "only 5 should be the resulting set\n"
+     ]
     }
    ],
    "source": [
     "a=[3,5,2]\n",
     "b=[2]\n",
     "g=[a,b]\n",
-    "set([x for g_i in g for x in g_i])"
+    "set([x for g_i in g for x in g_i]) - set([3,3,3,2,4])\n",
+    "print 'only 5 should be the resulting set'"
    ]
   },
   {
@@ -572,7 +570,7 @@
     "            '''\n",
     "            # determine dimensions of p_l and p_MF, and then create\n",
     "            # dimensions of p_l are determined by number of states for this agent \n",
-    "            # dimensions of p_MF \n",
+    "            # dimensions of p_MF\n",
     "            state_dim_l = len(agent.state_indices)\n",
     "            # set difference between all states in all agents, and states in current agent\n",
     "            state_dim_mf = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i]) - set(agent.state_indices)\n",
@@ -694,7 +692,7 @@
     "mean_field = MeanField()\n",
     "\n",
     "myAgent=Agent(mean_field, bb, state_indices=[1], control_indices=[1])\n",
-    "myAgent2=Agent2(mean_field, bb, state_indices=[1,2], control_indices=[1,2])\n",
+    "myAgent2=Agent2(mean_field, bb, state_indices=[1,2], control_indices=[1])\n",
     "\n",
     "# TODO: Create a method to do this automatically: By knowing q and p values, and knowing state and control indices, we can fill in q_p_u_dict\n",
     "myAgent.q_p_u_dict={}\n",
@@ -780,60 +778,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# forgot to pass in 'u_l' as a keyword argument\n",
-    "qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(myAgent)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stop' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "# forgot to pass in 'u_l' as a keyword argument\n",
-    "qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(myAgent2)"
+    "qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
+    "# forgot to pass in 'u_l' as a keyword argument\n",
+    "qpu_vec2, q_ls_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ls2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
    ]
   },
   {
@@ -844,207 +798,19 @@
     "    - Test this on a few nonzero inputs\n",
     "    - Test this on multidimensional state\n",
     "    - Test this on multidimensional control\n",
-    "    - Get this working for multiple agents"
+    "    - Get this working for multiple agents\n",
+    "    \n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0.        ,  82.30417415,   0.        , -28.09144272,\n",
-       "         0.        ,  81.30417415,   0.        ,   1.        ])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qpu_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.        , 11.57728582])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q_ls_bar\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.        , -3.35311444])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_ls_bar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.        , 10.57728582])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_mfs_bar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 1.])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "u_bar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.        , 11.57728582])]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q_ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.        , -3.35311444])]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_ls "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.        , 10.57728582])]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_mfs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([0., 1.])]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "us"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
